modal header gap fixed

--- a/react-template/src/context/modal.css
+++ b/react-template/src/context/modal.css
@@ -26,6 +26,7 @@
     text-align: center;
     padding: 10px;
     background-color: #e7e7e7;
+    margin-bottom: 0px;
 }
 
 .modal-form {
